[package]
name = "burn_import_testbed"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
burn-import = { git = "https://github.com/tracel-ai/burn", rev = "16239db2528d6eaf9bbedb502f18ebbfd4cd4975" }

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "16239db2528d6eaf9bbedb502f18ebbfd4cd4975", features = [
  "wgpu",
  "ndarray",
] }
