[package]
name = "burn_import_testbed"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
burn-import = { git = "https://github.com/tracel-ai/burn", rev = "d2699022df539874056b66c9d042a198f116e184" }

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "d2699022df539874056b66c9d042a198f116e184", features = [
  "wgpu",
  "ndarray",
] }
