[package]
name = "burn_import_testbed"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
burn-import = { git = "https://github.com/tracel-ai/burn", rev = "c94e7438293b1ce441f75fbed8dd651ff1b54b92" }

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "c94e7438293b1ce441f75fbed8dd651ff1b54b92", features = [
  "wgpu",
  "ndarray",
] }
